--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,33 @@
 [package]
-name = "pcloud"
-version = "0.1.0"
 authors = ["Schweeble <andrewjfranco@gmail.com>"]
 edition = "2018"
+name = "pcloud"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+console_error_panic_hook = "=0.1.5"
+js-sys = "0.3.19"
+lazy_static = "1.3.0"
+nalgebra = "0.18.0"
+wasm-bindgen = "0.2.44"
+
+[dependencies.web-sys]
+features = [
+  'Document',
+  'Element',
+  'EventTarget',
+  'HtmlCanvasElement',
+  'MouseEvent',
+  'WebGlBuffer',
+  'WebGlProgram',
+  'WebGlRenderingContext',
+  'WebGlShader',
+  'WebGlUniformLocation',
+  'Window',
+]
+version = "0.3.4"
